--- a/index.html
+++ b/index.html
@@ -14,7 +14,27 @@
         <header class="border-bottom"> 
                     <h1> Pizza<span class="text-secondary">Day</span></h1>
         <!-- navigation for header-->
-                    <ul class="nav ">
+        <!-- desk-top version -->
+                    <ul class="nav desktop">
+                        <li class="nav-item border-end">
+                            <a class="nav-link active text-dark" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item border-end">
+                            <a class="nav-link text-secondary" href="#">About</a>
+                        </li>
+                        <li class="nav-item border-end">
+                            <a class="nav-link text-secondary" href="#">Contacts</a>
+                        </li>
+                        <li class="nav-item border-end">
+                            <a class="nav-link text-secondary" href="#">Bonus</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-secondary" href="#">Checkout</a>
+                        </li>
+                        
+                    </ul>
+                    <!-- mobile version -->
+                            <ul class="nav flex-column mobile-nav">
                         <li class="nav-item border-end">
                             <a class="nav-link active text-dark" aria-current="page" href="#">Home</a>
                         </li>
@@ -33,9 +53,34 @@
                         
                     </ul>
         </header>
+        <!-- desk-top version -->
         <div class="horiz_banner">
                 <div class="banner_top">
-                    <ul class="nav bg-dark  ">
+                    <ul class="nav bg-dark desktop  ">
+                        <li class="nav-item ">
+                            <a class="nav-link active text-white-50" aria-current="page" href="#">Lorem.</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-secondary" href="#">Lorem.</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-secondary" href="#">Lorem</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-secondary" href="#">Lorem</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-secondary" href="#">Lorem</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-secondary" href="#">Lorem</a>
+                        </li>
+                    </ul>
+
+                    <!-- mobile version -->
+                    <div class="horiz_banner">
+                <div class="banner_top">
+                    <ul class="nav bg-dark flex-column mobile-nav ">
                         <li class="nav-item ">
                             <a class="nav-link active text-white-50" aria-current="page" href="#">Lorem.</a>
                         </li>
